--- a/index.html
+++ b/index.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Institucional Genérica</title>
+    <link rel="stylesheet" href="./src/styles/globalStyles.css" />
   </head>
   <body>
     <!-- ====== Header ====== -->
     <header>
-      <div>
-        <img src="" alt="" />
-        <button>Entrar para próxima turma</button>
+      <div class="header__container">
+        <img class="header__logo" src="./src/assets/logo.svg" alt="logo" />
+        <button class="button button--default">
+          Entrar para próxima turma
+        </button>
       </div>
     </header>
     <main>
       <!-- ====== Section Banner ====== -->
-      <section>
+      <section class="banner">
         <div>
-          <h1>Desenvolvendo <span>suas</span> próximas habilidades</h1>
-          <p>
+          <h1 class="banner__title">
+            Desenvolvendo <span>suas</span> próximas habilidades
+          </h1>
+          <p class="banner__content">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
             ever since the 1500s
           </p>
-          <button>Sobre nós</button>
+          <button class="button button--brand">Sobre nós</button>
         </div>
       </section>
 
       <!-- ====== Section About ====== -->
-      <section>
+      <section class="about">
         <div>
-          <h2>Quem somos nós?</h2>
-          <p>
+          <h2 class="about__title">Quem somos nós?</h2>
+          <p class="about__content">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -41,26 +46,28 @@
       </section>
 
       <!-- ====== Section FAQ ====== -->
-      <section>
-        <div>
+      <section class="faq">
+        <div class="faq__container">
           <!-- LEFT SIDE -->
-          <div>
+          <div class="faq__left">
             <div>
-              <h2>Dúvidas frequentes</h2>
-              <p>
+              <h2 class="faq__title">Dúvidas frequentes</h2>
+              <p class="faq__content">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
                 text ever since the 1500s
               </p>
-              <button>Entrar para próxima turma</button>
+              <button class="button button--brand">
+                Entrar para próxima turma
+              </button>
             </div>
           </div>
           <!-- RIGHT SIDE -->
-          <ul>
+          <ul class="faq__right">
             <!-- Question 1 -->
-            <li>
+            <li class="faq__question">
               <h3>Quais matérias vou pagar?</h3>
-              <p>
+              <p class="faq__answer">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -68,9 +75,9 @@
               </p>
             </li>
             <!-- Question 2 -->
-            <li>
+            <li class="faq__question">
               <h3>Tenho direito à cancelamento?</h3>
-              <p>
+              <p class="faq__answer">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -78,9 +85,9 @@
               </p>
             </li>
             <!-- Question 3 -->
-            <li>
+            <li class="faq__question">
               <h3>O acesso do curso é vitalício?</h3>
-              <p>
+              <p class="faq__answer">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -88,9 +95,9 @@
               </p>
             </li>
             <!-- Question 4 -->
-            <li>
+            <li class="faq__question">
               <h3>O acesso do curso é vitalício?</h3>
-              <p>
+              <p class="faq__answer">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -102,13 +109,13 @@
       </section>
 
       <!-- ====== Section Comments ====== -->
-      <section>
-        <div>
+      <section class="comments">
+        <div class="comments__container">
           <!-- RIGHT SIDE -->
-          <div>
+          <div class="comments__left">
             <div>
-              <h2>O que nossos alunos comentam?</h2>
-              <p>
+              <h2 class="comments__title">O que nossos alunos comentam?</h2>
+              <p class="comments__content">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
                 text ever since the 1500s
@@ -116,14 +123,14 @@
             </div>
           </div>
           <!-- LEFT SIDE -->
-          <ul>
+          <ul class="comments__right">
             <!-- Comment 1 -->
-            <li>
-              <div>
+            <li class="comments__comment">
+              <div class="comments__author">
                 <h3>Júlia Lima</h3>
                 <p>Aluna na turma 2019</p>
               </div>
-              <p>
+              <p class="comments__info">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -131,12 +138,12 @@
               </p>
             </li>
             <!-- Comment 2 -->
-            <li>
-              <div>
+            <li class="comments__comment">
+              <div class="comments__author">
                 <h3>Carlos Ino</h3>
                 <p>Aluno na turma 2020</p>
               </div>
-              <p>
+              <p class="comments__info">
                 It is a 🎨 established fact that a reader will be distracted by
                 the readable content of a page when looking at its layout. The
                 point of using Lorem Ipsum is that it has a more-or-less normal
@@ -144,12 +151,12 @@
               </p>
             </li>
             <!-- Comment 3 -->
-            <li>
-              <div>
+            <li class="comments__comment">
+              <div class="comments__author">
                 <h3>Camila Dias</h3>
                 <p>Aluna na turma 2019</p>
               </div>
-              <p>
+              <p class="comments__info">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -157,12 +164,12 @@
               </p>
             </li>
             <!-- Comment 4 -->
-            <li>
-              <div>
+            <li class="comments__comment">
+              <div class="comments__author">
                 <h3>João Vaz</h3>
                 <p>Aluno na turma 2019</p>
               </div>
-              <p>
+              <p class="comments__info">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -170,12 +177,12 @@
               </p>
             </li>
             <!-- Comment 5 -->
-            <li>
-              <div>
+            <li class="comments__comment">
+              <div class="comments__author">
                 <h3>Gio Oliveira</h3>
                 <p>Aluna na turma 2019</p>
               </div>
-              <p>
+              <p class="comments__info">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
                 The point of using Lorem Ipsum is that it has a more-or-less
@@ -189,7 +196,9 @@
 
     <!-- ====== Footer ====== -->
     <footer>
-      <img src="" alt="" />
+      <div class="footer__container">
+        <img class="footer__logo" src="./src/assets/logo.svg" alt="logo" />
+      </div>
     </footer>
 
     <!-- ====== Modal ====== -->
