--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <section class="comments">
         <div class="comments__container">
           <!-- RIGHT SIDE -->
-          <div class="comments__left">
+          <div class="comments__right">
             <div>
               <h2 class="comments__title">O que nossos alunos comentam?</h2>
               <p class="comments__content">
@@ -123,7 +123,7 @@
             </div>
           </div>
           <!-- LEFT SIDE -->
-          <ul class="comments__right">
+          <ul class="comments__left">
             <!-- Comment 1 -->
             <li class="comments__comment">
               <div class="comments__author">
