--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Institucional Genérica</title>
     <link rel="stylesheet" href="./src/styles/globalStyles.css" />
+    <script src="./src/scripts/index.js" defer></script>
   </head>
   <body>
     <!-- ====== Header ====== -->
     <header>
       <div class="header__container">
         <img class="header__logo" src="./src/assets/logo.svg" alt="logo" />
-        <button class="button button--default">
+        <button class="button button--default openModal">
           Entrar para próxima turma
         </button>
       </div>
@@ -57,7 +58,7 @@
                 industry. Lorem Ipsum has been the industry's standard dummy
                 text ever since the 1500s
               </p>
-              <button class="button button--brand">
+              <button class="button button--brand openModal">
                 Entrar para próxima turma
               </button>
             </div>
@@ -202,6 +203,22 @@
     </footer>
 
     <!-- ====== Modal ====== -->
-    <dialog></dialog>
+    <dialog class="modal">
+      <div>
+        <h3 class="modal__title">Cadastro</h3>
+        <span class="modal__close">X</span>
+      </div>
+      <p class="modal__content">
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry's standard dummy text ever
+        since the 1500s
+      </p>
+      <form class="modal__form">
+        <input type="email" class="modal__input" placeholder="Digitar email" />
+        <button type="submit" class="button button--brand button--modal">
+          Entrar na lista para próxima lista
+        </button>
+      </form>
+    </dialog>
   </body>
 </html>
