--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="header__container">
         <img class="header__logo" src="./src/assets/logo.svg" alt="logo" />
-        <button class="button button--default openModal">
+        <button id="buttonHeader" class="button button--default openModal">
           Entrar para próxima turma
         </button>
       </div>
@@ -54,11 +54,12 @@
             <div>
               <h2 class="faq__title">Dúvidas frequentes</h2>
               <p class="faq__content">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s
+                Lorem ipsum dolor sit amet consecteur, adipisicing
+                elit. Dolor dolorem veritatis veniam fuga. Itaque error
+                quae et magni maxime ab quibusdam enim, animi dicta. IIIo
+                 odio eum ex quo at?
               </p>
-              <button class="button button--brand openModal">
+              <button id="buttonFaq" class="button button--brand openModal">
                 Entrar para próxima turma
               </button>
             </div>
